--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     },
     "dependencies": {
         "firebase": "^9.12.1",
+        "swiper": "^8.4.4",
         "uuid": "^9.0.0",
-        "vue-router": "^4.1.5"
+        "vue-router": "^4.1.5",
+        "vue3-circle-progress": "^1.0.7"
     }
 }
